objects/hic_signeasy__Sign_Recipient__c.object
<CustomObject>
    <description>Recipient of a Sign Transaction</description>
    <fields>
        <fullName>hic_signeasy__Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Decline_Reason__c</fullName>
        <label>Decline Reason</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Document_Tag__c</fullName>
        <label>Document Tag</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Initials__c</fullName>
        <label>Initials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Is_Mail_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Mail Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Is_Term_And_Condition_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Term And Condition Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Reassign_Reason__c</fullName>
        <label>Reassign Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Reassigner_Name__c</fullName>
        <label>Reassigner Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__RecipientName__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Recipient_Details__c</fullName>
        <label>Recipient Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>InPersonSigner</fullName>
                </value>
                <value>
                    <fullName>Signer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hic_signeasy__Sign_Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sign Recipient</label>
        <referenceTo>hic_signeasy__Sign_Recipient__c</referenceTo>
        <relationshipLabel>SignRecipients</relationshipLabel>
        <relationshipName>SignRecipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Signed_On__c</fullName>
        <label>Signed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__SignerIndex__c</fullName>
        <label>Signer Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Signing_Index__c</fullName>
        <label>Signer Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DRAFT</fullName>
                    <default>true</default>
                    <label>DRAFT</label>
                </value>
                <value>
                    <fullName>SENT</fullName>
                </value>
                <value>
                    <fullName>VIEWED</fullName>
                </value>
                <value>
                    <fullName>COMPLETE</fullName>
                </value>
                <value>
                    <fullName>DECLINED</fullName>
                </value>
                <value>
                    <fullName>CANCELLED</fullName>
                </value>
                <value>
                    <fullName>REASSIGN</fullName>
                </value>
                <value>
                    <fullName>EXPIRED</fullName>
                    <isActive>false</isActive>
                    <label>EXPIRED</label>
                </value>
                <value>
                    <fullName>PENDING</fullName>
                    <isActive>false</isActive>
                    <label>PENDING</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hic_signeasy__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Transaction__c</fullName>
        <label>Sign Transaction</label>
        <referenceTo>hic_signeasy__Transaction__c</referenceTo>
        <relationshipLabel>Recipients</relationshipLabel>
        <relationshipName>Recipients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__UUID__c</fullName>
        <label>UUID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Sign Recipient</label>
    <listViews>
        <fullName>hic_signeasy__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CSR-{00000}</displayFormat>
        <label>Recipient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SignRecipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>